--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="Descripcion" content="Curriculum vitae Desarrollador de Software">
     <meta name="robots" content="index,follow">
     <title>Portfolio</title>
-    <link rel="Stylesheet" href="/estilos.css">
+    <link rel="Stylesheet" href="estilos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -152,7 +152,7 @@
                     </div>
                 </div>
             </div>
-            <a href="/docs/1670618758016_HV_mauricio sanchez abella.pdf" download="HV"><button>
+            <a href="docs/1670618758016_HV_mauricio sanchez abella.pdf" download="HV"><button>
                     Download CV<i class="fa-solid fa-download"></i>
                     <span class="overly"></span>
                 </button>
@@ -386,7 +386,7 @@
                 <div class="proyecto">
                     <img src="img/img_1.png" alt="">
                     <div class="overley">
-                        <a href="http://pequenospicassos.infinityfreeapp.com/">
+                        <a href="https://mauriciosancheza.github.io/pequenosPicassos.github.io/">
                             <h3>Pequeños Picassos</h3>
                         </a>
                         <p>Web Site</p>
@@ -409,7 +409,7 @@
                 <div class="proyecto">
                     <img src="img/encriptar_2.jpg" alt="">
                     <div class="overley">
-                        <a href="http://decodificador.infinityfreeapp.com/">
+                        <a href="https://mauriciosancheza.github.io/Decodificadortexto.github.io/">
                             <h3>Encriptador</h3>
                         </a>
                         <p>Web Site</p>
@@ -432,7 +432,7 @@
                 <div class="proyecto">
                     <img src="img/Barberia_3.jpg" alt="">
                     <div class="overley">
-                        <a href="http://barbershopharley.infinityfreeapp.com/">
+                        <a href="https://mauriciosancheza.github.io/BarberShop.github.io/">
                             <h3>BarberShop</h3>
                         </a>
                         <p>Web Site</p>
@@ -511,7 +511,7 @@
         </div>
     </footer>
 
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
